--- a/apps/nextjs/components.json
+++ b/apps/nextjs/components.json
@@ -4,9 +4,9 @@
   "rsc": true,
   "tsx": true,
   "tailwind": {
-    "config": "tailwind.config.js",
-    "css": "styles/global.css",
-    "baseColor": "zinc",
+    "config": "tailwind.config.ts",
+    "css": "src/app/styles/global.css",
+    "baseColor": "slate",
     "cssVariables": true
   },
   "aliases": {
