--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -16,6 +16,9 @@
     "@acme/api": "^0.1.0",
     "@acme/db": "^0.1.0",
     "@clerk/nextjs": "^4.23.1",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-devtools": "^4.32.0",
