--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -29,6 +29,7 @@
     "@trpc/server": "^10.35.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "immer": "^10.0.2",
     "lucide-react": "^0.263.1",
     "next": "^13.4.12",
     "react": "18.2.0",
@@ -36,6 +37,7 @@
     "superjson": "1.13.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
+    "use-immer": "^0.9.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
