--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -42,7 +42,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "use-immer": "^0.9.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@acme/eslint-config": "^0.2.0",
